updated UI, added about page, removed hyderabad temp not showing bug

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ div.google-map {
   margin-top: 10px;
 }
 
-.card-text h1{
+.card-text h1, h3{
   color: #000;
 }
 
